--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/img/icon.png"/>
     <title>Portfolio - Pablo Pantoja</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/views/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <!--Icon-Font-->
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
@@ -183,7 +183,7 @@
             <a href="https://lilis-boutique.onrender.com/" class="w-full h-72 lilis all" target="_blank">
 
             </a>
-            <a href="https://clinquant-gumption-d3a270.netlify.app/" class="w-full h-72 cripto all" target="_blank">
+            <a href="https://criptovalue.netlify.app/" class="w-full h-72 cripto all" target="_blank">
 
             </a>
             <a href="https://pokedev-1.netlify.app/" class="w-full h-72 pokedev all" target="_blank">
