--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -117,7 +117,7 @@
                       </svg>
                     </a>
                 </li>
-                <li><a href="/img/CV-PABLO PANTOJA 2024.pdf" download="CV-Pablo Pantoja">
+                <li><a href="/img/CV Pablo 2024.pdf" download="CV-Pablo Pantoja">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-cv" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                         <path d="M14 3v4a1 1 0 0 0 1 1h4" />
@@ -171,16 +171,73 @@
                 <path d="M12 3v19" />
                 <path d="M18 11.227c0 3.273 -1.812 4.77 -6 9.273c-4.188 -4.503 -6 -6 -6 -9.273c0 -4.454 3.071 -6.927 6 -9.227c2.929 2.3 6 4.773 6 9.227z" />
             </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icono icon-tabler icon-tabler-brand-nodejs" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <path d="M9 9v8.044a2 2 0 0 1 -2.996 1.734l-1.568 -.9a3 3 0 0 1 -1.436 -2.561v-6.635a3 3 0 0 1 1.436 -2.56l6 -3.667a3 3 0 0 1 3.128 0l6 3.667a3 3 0 0 1 1.436 2.561v6.634a3 3 0 0 1 -1.436 2.56l-6 3.667a3 3 0 0 1 -3.128 0" />
+                <path d="M17 9h-3.5a1.5 1.5 0 0 0 0 3h2a1.5 1.5 0 0 1 0 3h-3.5" />
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icono icon-tabler icon-tabler-brand-wordpress" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff"a fill="none" stroke-linecap="round" stroke-linejoin="round"> 
+                <path d="M9.5 9h3"></path> 
+                <path d="M4 9h2.5"></path> 
+                <path d="M11 9l3 11l4 -9"></path> 
+                <path d="M5.5 9l3.5 11l3 -7"></path> 
+                <path d="M18 11c.177 -.528 1 -1.364 1 -2.5c0 -1.78 -.776 -2.5 -1.875 -2.5c-.898 0 -1.125 .812 -1.125 1.429c0 1.83 2 2.058 2 3.571z"></path> 
+                <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path> </svg> 
             </div>
         </div>
     </div>
     <br id="project">
     <br>
     <br>
+    <!--<div class="container hidden" id="hlilis">
+        <div class="container-data grid grid-cols-2 gap-4">
+            <img src="/img/Lilis.png" alt="" class="row-span-2">
+            <div class="row-span-2">
+                <div>
+                    <h1 class="font-bold text-xl md:text-2xl text-center p-5">Lili's Boutique</h1>
+                    <h2 class="font-bold text-lg md:text-xl">Primer proyecto FullStack</h2><br>
+                </div>
+                <p class="text-base md:text-lg ">Lo desarrolle con la intención de “aumentar el alcance” de la marca de ropa Lili’s Boutique, un emprendimiento cuyo objetivo es vestir a la mujer venezolana en una categoría casual y formal, de manera elegante y sexy, con prendas hechas a la medida, donde pueda verse bien y sentirse cómoda.</p><br>
+                <h2 class="font-bold text-lg md:text-xl">Tecnologias</h2>
+                <div class="flex gap-5">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="ico icon-tabler icon-tabler-brand-javascript" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#eab308" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+                        <path d="M7.5 8h3v8l-2 -1" />
+                        <path d="M16.5 8h-2.5a.5 .5 0 0 0 -.5 .5v3a.5 .5 0 0 0 .5 .5h1.423a.5 .5 0 0 1 .495 .57l-.418 2.93l-2 .5" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="ico icon-tabler icon-tabler-brand-nodejs" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#0f833a" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M9 9v8.044a2 2 0 0 1 -2.996 1.734l-1.568 -.9a3 3 0 0 1 -1.436 -2.561v-6.635a3 3 0 0 1 1.436 -2.56l6 -3.667a3 3 0 0 1 3.128 0l6 3.667a3 3 0 0 1 1.436 2.561v6.634a3 3 0 0 1 -1.436 2.56l-6 3.667a3 3 0 0 1 -3.128 0" />
+                        <path d="M17 9h-3.5a1.5 1.5 0 0 0 0 3h2a1.5 1.5 0 0 1 0 3h-3.5" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="ico icon-tabler icon-tabler-brand-html5" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ea580c" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+                        <path d="M15.5 8h-7l.5 4h6l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="ico icon-tabler icon-tabler-brand-css3" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2563eb" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+                        <path d="M8.5 8h7l-4.5 4h4l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="ico icon-tabler icon-tabler-brand-tailwind" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#0284c7" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M11.667 6c-2.49 0 -4.044 1.222 -4.667 3.667c.933 -1.223 2.023 -1.68 3.267 -1.375c.71 .174 1.217 .68 1.778 1.24c.916 .912 2 1.968 4.288 1.968c2.49 0 4.044 -1.222 4.667 -3.667c-.933 1.223 -2.023 1.68 -3.267 1.375c-.71 -.174 -1.217 -.68 -1.778 -1.24c-.916 -.912 -1.975 -1.968 -4.288 -1.968zm-4 6.5c-2.49 0 -4.044 1.222 -4.667 3.667c.933 -1.223 2.023 -1.68 3.267 -1.375c.71 .174 1.217 .68 1.778 1.24c.916 .912 1.975 1.968 4.288 1.968c2.49 0 4.044 -1.222 4.667 -3.667c-.933 1.223 -2.023 1.68 -3.267 1.375c-.71 -.174 -1.217 -.68 -1.778 -1.24c-.916 -.912 -1.975 -1.968 -4.288 -1.968z" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="ico icon-tabler icon-tabler-brand-mongodb" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#16a34a" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 3v19" />
+                        <path d="M18 11.227c0 3.273 -1.812 4.77 -6 9.273c-4.188 -4.503 -6 -6 -6 -9.273c0 -4.454 3.071 -6.927 6 -9.227c2.929 2.3 6 4.773 6 9.227z" />
+                    </svg>
+                </div>
+            </div>
+        </div>
+    </div>-->
     <div class="w-full md:h-full">
         <h2 class="font-bold text-center text-2xl md:text-4xl p-10 md:p-20">Mis Proyectos</h2>
         <div class="grid grid-flow-row md:grid-cols-3 gap-8 p-4">
-            <a href="https://lilis-boutique.onrender.com/" class="w-full h-72 lilis all" target="_blank">
+            <!--AQUI VA UN DIV--><a href="https://lilis-boutique.onrender.com/" class="w-full h-72 lilis all cursor-pointer" id="lilis" target="_blank">
 
             </a>
             <a href="https://criptovalue.netlify.app/" class="w-full h-72 cripto all" target="_blank">
@@ -189,13 +246,13 @@
             <a href="https://pokedev-1.netlify.app/" class="w-full h-72 pokedev all" target="_blank">
 
             </a>
+            <a href="https://serviamigomultiservices.com/" class="w-full h-72 serviamigo all" target="_blank">
+
+            </a>
             <div class="w-full cursor-pointer bg-black">
                 <img src="" alt="">
             </div>
-            <div class="w-full cursor-pointer bg-white">
-                <img src="" alt="">
-            </div>
-            <div class="w-full cursor-pointer">
+            <div class="w-full cursor-pointer bg-black">
                 <img src="" alt="">
             </div>
         </div>
