--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </li>
         </ul>
     </nav>
-    <div class="grid md:flex md:p-28 pt-24  w-full md:h-full items-center">
+    <div class="grid md:flex md:p-28 pt-24 w-full md:h-full">
         <div class="m-5 pt-5 md:pt-20 md:w-2/4 md:-order-1">
             <h1 class="text-xl md:text-3xl">Bienvenidos</h1>
             <h2 class="text-lg md:text-2xl">Me llamo <b class="text-xl md:text-4xl">Pablo Pantoja</b></h2>
@@ -145,7 +145,7 @@
             <p class="text-base md:text-xl p-4">Soy un programador full stack, estoy entrando en el mundo del desarrollo de software, sin embargo, tengo más de 3 años de experiencia en cargos relacionados con las TIC, busco formar parte de una compañía que haga florecer mis habilidades.
                 Como mencione tengo amplia experiencia trajando en puestos relacionados con tecnologia, tambien soy Informatico titulado y poseo diversas aptitudes y actitudes que me facilitan trabajar en equipo. <br>
             </p>
-            <div class="flex gap-5 md:gap-12 p-10 md:p-20 justify-center -order-1">
+            <div class="grid grid-cols-4 gap-5 md:gap-12 p-10 md:p-20 justify-center -order-1">
             <svg xmlns="http://www.w3.org/2000/svg" class="icono icon-tabler icon-tabler-brand-html5" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                 <path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
@@ -260,7 +260,7 @@
     <br id="contacto">
     <br>
     <br>
-    <div class="bg-zinc-800 w-full md:h-full">
+    <div class="pb-10 md:pd-1 bg-zinc-800 w-full md:h-full">
         <h2 class="font-bold text-center text-2xl md:text-4xl p-10 md:p-20">Contactame por</h2>
         <div class="">
             <form class="max-w-xs md:max-w-sm mx-auto" action="https://formsubmit.co/eb2f7f3678ee1cc036f03f4037acd33e" method="POST">
