--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <main>
         <!-- ===== SECCIÓN DE BIENVENIDA ===== -->
         <section id="inicio" class="min-h-screen">
-            <div class="container mx-auto px-6 h-full flex flex-col md:flex-row items-center justify-center">
+            <div class="container mx-auto pt-6 px-6 h-full flex flex-col md:flex-row items-center justify-center">
                 <div class="md:w-1/2 text-center md:text-left mb-10 md:mb-0 md:pl-10">
                     <!-- Edita el texto de bienvenida y tu descripción corta -->
                     <h1 class="text-5xl font-bold mb-4 font-custom">Bienvenidos</h1>
@@ -65,7 +65,7 @@
                         Cuento con diversas habilidades en áreas de tecnología y estoy interesado en formar parte de una organización que me permita aprovechar y ampliar mis conocimientos.
                     </p>
                 </div>
-                <div class="md:w-1/2 flex justify-center">
+                <div class="md:w-1/2 w-full flex justify-center">
                     <!-- Aquí va tu imagen de perfil. Cambia la URL en '''src''' -->
                     <div class="hexagon-container">
                         <img src="img/foto.png" alt="Pablo Pantoja" class="hexagon-image">
