--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="#contacto" class="text-white hover:text-sky-700">Contáctame</a>
             </div>
             <!-- Botón para descargar tu CV. Asegúrate de que la ruta sea correcta -->
-            <a href="/docs/CV PABLO NOV 2025.pdf" download class="hidden md:block bg-sky-900 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded-full transition duration-300">
+            <a href="/docs/CV PABLO NOV 2025.pdf" download class="hidden md:block bg-sky-900 hover:bg-sky-700 text-zinc-100 font-bold py-2 px-4 rounded-full transition duration-300">
                 Descargar CV
             </a>
             <!-- Botón de menú hamburguesa para móviles -->
@@ -77,12 +77,12 @@
         <!-- ===== SECCIÓN "SOBRE MÍ" ===== -->
         <section id="sobre-mi" class="py-20 bg-zinc-800">
             <div class="container mx-auto px-6">
-                <h2 class="text-4xl font-bold text-center mb-12">Sobre Mí</h2>
+                <h2 class="text-4xl font-bold text-center mb-12 font-custom">Sobre Mí</h2>
                 <!-- Contenedor relativo para los iconos flotantes -->
                 <div class="relative flex justify-center items-center" style="min-height: 500px;">
                     <!-- Texto central -->
                     <div class="max-w-2xl text-center z-10">
-                        <p class="text-lg text-zinc-400 font-custom">
+                        <p class="text-lg text-white font-bold font-custom">
                             Soy un Programador Full Stack con una sólida formación académica como Ingeniero en Informática. Aunque estoy iniciando mi trayectoria formal en el desarrollo de software, aporto más de cuatro años de experiencia en roles relacionados con las Tecnologías de la Información y Comunicación, lo que me proporciona una base técnica y de negocio robusta. Mi enfoque actual está en aplicar mis conocimientos de desarrollo e integrarme a un equipo donde pueda crecer profesionalmente y contribuir activamente con mi capacidad para el trabajo en equipo y mis habilidades interpersonales y técnicas.
                         </p>
                     </div>
@@ -99,6 +99,7 @@
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" alt="MongoDB" class="tech-icon-floating icon-pos-9"/>
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" alt="PostgreSQL" class="tech-icon-floating icon-pos-10"/>
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python" class="tech-icon-floating icon-pos-11"/>
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git" class="tech-icon-floating icon-pos-12"/>
                 </div>
             </div>
         </section>
@@ -106,14 +107,14 @@
         <!-- ===== SECCIÓN "PORTAFOLIO" ===== -->
         <section id="portafolio" class="py-20">
             <div class="container mx-auto px-6">
-                <h2 class="text-4xl font-bold text-center mb-12">Portafolio</h2>
+                <h2 class="text-4xl font-bold text-center mb-12 font-custom">Portafolio</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     
                     <!-- Tarjeta de Proyecto 1 -->
                     <div class="project-card" data-project-id="1">
                         <img src="/img/serviamigo.jpg" alt="Proyecto 1" class="w-full h-48 object-cover">
                         <div class="p-4">
-                            <h3 class="text-xl font-bold">Serviamigo Multiservices</h3>
+                            <h3 class="text-xl font-bold font-custom">Serviamigo Multiservices</h3>
                         </div>
                     </div>
                     
@@ -121,23 +122,23 @@
                     <div class="project-card" data-project-id="2">
                         <img src="/img/masajes.jpg" alt="Proyecto 2" class="w-full h-48 object-cover">
                         <div class="p-4">
-                            <h3 class="text-xl font-bold">Thai Home Women Massages</h3>
+                            <h3 class="text-xl font-bold font-custom">Thai Home Women Massages</h3>
                         </div>
                     </div>
 
                     <!-- Tarjeta de Proyecto 3 -->
-                    <div class=".project-card" data-project-id="3">
-                        <img src="/img/cargando.jpg" alt="Proyecto 3" class="w-full h-48 object-cover">
+                    <div class="project-card" data-project-id="3">
+                        <img src="/img/pokedex.png" alt="Proyecto 3" class="w-full h-48 object-cover">
                         <div class="p-4">
-                            <h3 class="text-xl font-bold">Proyecto 3</h3>
+                            <h3 class="text-xl font-bold font-custom">Pokedex</h3>
                         </div>
                     </div>
 
                     <!-- Tarjeta de Proyecto 4 -->
-                    <div class=".project-card" data-project-id="4">
-                        <img src="/img/cargando.jpg" alt="Proyecto 4" class="w-full h-48 object-cover">
+                    <div class="project-card" data-project-id="4">
+                        <img src="/img/ApiREST.png" alt="Proyecto 4" class="w-full h-48 object-cover">
                         <div class="p-4">
-                            <h3 class="text-xl font-bold">Proyecto 4</h3>
+                            <h3 class="text-xl font-bold font-custom">API REST con Python</h3>
                         </div>
                     </div>
 
@@ -145,7 +146,7 @@
                     <div class=".project-card" data-project-id="5">
                         <img src="/img/cargando.jpg" alt="Proyecto 5" class="w-full h-48 object-cover">
                         <div class="p-4">
-                            <h3 class="text-xl font-bold">Proyecto 5</h3>
+                            <h3 class="text-xl font-bold font-custom">Proyecto 5</h3>
                         </div>
                     </div>
 
@@ -153,7 +154,7 @@
                     <div class=".project-card" data-project-id="6">
                         <img src="/img/cargando.jpg" alt="Proyecto 6" class="w-full h-48 object-cover">
                         <div class="p-4">
-                            <h3 class="text-xl font-bold">Proyecto 6</h3>
+                            <h3 class="text-xl font-bold font-custom">Proyecto 6</h3>
                         </div>
                     </div>
                 </div>
@@ -163,7 +164,7 @@
         <!-- ===== SECCIÓN "CONTÁCTAME" ===== -->
         <section id="contacto" class="py-20 bg-zinc-800">
             <div class="container mx-auto px-6">
-                <h2 class="text-4xl font-bold text-center mb-12">Contáctame</h2>
+                <h2 class="text-4xl font-bold text-center mb-12 font-custom">Contáctame</h2>
                 <div class="relative flex flex-col items-center">
                     <!-- Formulario de Contacto -->
                     <form action="https://formspree.io/f/xldpyogj" method="POST" class="w-full max-w-lg z-10 bg-zinc-900 p-8 rounded-lg shadow-lg">
@@ -201,7 +202,7 @@
                         </div>
                         <div class="md:flex md:items-center">
                             <div class="w-full">
-                                <button class="shadow bg-sky-900 hover:bg-sky-700 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded w-full" type="submit">
+                                <button class="shadow bg-sky-900 hover:bg-sky-700 focus:shadow-outline focus:outline-none text-zinc-100 font-bold py-2 px-4 rounded w-full" type="submit">
                                     Enviar Mensaje
                                 </button>
                             </div>
