--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             </div>
         </nav>
         <!-- Menú desplegable para móviles -->
-        <div id="sidebar" class="hidden md:hidden bg-zinc-900">
-            <a href="#inicio" class="block py-2 px-4 text-white hover:bg-zinc-800">Inicio</a>
-            <a href="#sobre-mi" class="block py-2 px-4 text-white hover:bg-zinc-800">Sobre mí</a>
-            <a href="#portafolio" class="block py-2 px-4 text-white hover:bg-zinc-800">Portafolio</a>
-            <a href="#contacto" class="block py-2 px-4 text-white hover:bg-zinc-800">Contáctame</a>
+        <div id="sidebar" class="hidden md:hidden bg-zinc-800">
+            <a href="#inicio" class="block py-2 px-4 text-white hover:bg-zinc-700">Inicio</a>
+            <a href="#sobre-mi" class="block py-2 px-4 text-white hover:bg-zinc-700">Sobre mí</a>
+            <a href="#portafolio" class="block py-2 px-4 text-white hover:bg-zinc-700">Portafolio</a>
+            <a href="#contacto" class="block py-2 px-4 text-white hover:bg-zinc-700">Contáctame</a>
             <a href="/docs/CV PABLO NOV 2025.pdf" download class="block py-2 px-4 text-white hover:bg-zinc-800">Descargar CV</a>
         </div>
     </header>
@@ -143,10 +143,10 @@
                     </div>
 
                     <!-- Tarjeta de Proyecto 5 -->
-                    <div class=".project-card" data-project-id="5">
-                        <img src="/img/cargando.jpg" alt="Proyecto 5" class="w-full h-48 object-cover">
+                    <div class="project-card" data-project-id="5">
+                        <img src="/img/IA.jpg" alt="Proyecto 5" class="w-full h-48 object-cover">
                         <div class="p-4">
-                            <h3 class="text-xl font-bold font-custom">Proyecto 5</h3>
+                            <h3 class="text-xl font-bold font-custom">Asistente IA con Python</h3>
                         </div>
                     </div>
 
