--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             </div>
              <!-- Enlaces de navegación para escritorio -->
             <div class="hidden md:flex items-center space-x-6">
-                <a href="#inicio" class="text-white hover:text-sky-700">Inicio</a>
-                <a href="#sobre-mi" class="text-white hover:text-sky-700">Sobre mí</a>
-                <a href="#portafolio" class="text-white hover:text-sky-700">Portafolio</a>
-                <a href="#contacto" class="text-white hover:text-sky-700">Contáctame</a>
+                <a href="#inicio" class="text-white hover:text-sky-700 font-custom">Inicio</a>
+                <a href="#sobre-mi" class="text-white hover:text-sky-700 font-custom">Sobre mí</a>
+                <a href="#portafolio" class="text-white hover:text-sky-700 font-custom">Portafolio</a>
+                <a href="#contacto" class="text-white hover:text-sky-700 font-custom">Contáctame</a>
             </div>
             <!-- Botón para descargar tu CV. Asegúrate de que la ruta sea correcta -->
-            <a href="/docs/CV PABLO NOV 2025.pdf" download class="hidden md:block bg-sky-900 hover:bg-sky-700 text-zinc-100 font-bold py-2 px-4 rounded-full transition duration-300">
+            <a href="/docs/CV PABLO NOV 2025.pdf" download class="hidden md:block bg-sky-900 hover:bg-sky-700 text-zinc-100 font-bold py-2 px-4 rounded-full transition duration-300 font-custom">
                 Descargar CV
             </a>
             <!-- Botón de menú hamburguesa para móviles -->
@@ -45,11 +45,11 @@
         </nav>
         <!-- Menú desplegable para móviles -->
         <div id="sidebar" class="hidden md:hidden bg-zinc-800">
-            <a href="#inicio" class="block py-2 px-4 text-white hover:bg-zinc-700">Inicio</a>
-            <a href="#sobre-mi" class="block py-2 px-4 text-white hover:bg-zinc-700">Sobre mí</a>
-            <a href="#portafolio" class="block py-2 px-4 text-white hover:bg-zinc-700">Portafolio</a>
-            <a href="#contacto" class="block py-2 px-4 text-white hover:bg-zinc-700">Contáctame</a>
-            <a href="/docs/CV PABLO NOV 2025.pdf" download class="block py-2 px-4 text-white hover:bg-zinc-800">Descargar CV</a>
+            <a href="#inicio" class="block py-2 px-4 text-white hover:bg-zinc-700 font-custom">Inicio</a>
+            <a href="#sobre-mi" class="block py-2 px-4 text-white hover:bg-zinc-700 font-custom">Sobre mí</a>
+            <a href="#portafolio" class="block py-2 px-4 text-white hover:bg-zinc-700 font-custom">Portafolio</a>
+            <a href="#contacto" class="block py-2 px-4 text-white hover:bg-zinc-700 font-custom">Contáctame</a>
+            <a href="/docs/CV PABLO NOV 2025.pdf" download class="block py-2 px-4 text-white hover:bg-zinc-800 font-custom">Descargar CV</a>
         </div>
     </header>
 
@@ -68,7 +68,7 @@
                 <div class="md:w-1/2 w-full flex justify-center">
                     <!-- Aquí va tu imagen de perfil. Cambia la URL en '''src''' -->
                     <div class="hexagon-container">
-                        <img src="img/foto.png" alt="Pablo Pantoja" class="hexagon-image">
+                        <img src="img/imagen.png" alt="Pablo Pantoja" class="hexagon-image p-4 md:p-8">
                     </div>
                 </div>
             </div>
